<resources>
    <string name="app_name">FitnessLog</string>
    <string name="beginner_text">
        <b>Beginnner</b>\n\n3x per week\n(0-1 years of experience)
    </string>
    <string name="intermediate_text">
        <b>Intermediate</b>\n\n3x per week\n(1-3 years of experience)
    </string>
    <string name="advanced_text">
        <b>Advanced</b>\n\n4-6x per week\n(4+ years of experience)
    </string>
    <string name="deadlift">Deadlift</string>
    <string name="barbell_row">Barbell row</string>
    <string name="squat">Squat</string>
    <string name="bench_press">Bench press</string>
    <string name="about">About</string>
    <string name="continue_program">Continue Program</string>
    <string name="new_program">New Program</string>
    <string name="it_s_gainz_day">it\'s Gainz Day!</string>
    <string name="leave_the_ones_you_never_did_blank">Leave the ones you never did blank. Weights will be automatically assigned if left blank. </string>
    <string name="what_exercises_have_you_done">What exercises have you done?</string>
    <string name="overhead_press">Overhead press</string>
    <string name="input_max_weight_for_5_reps">input max weight for 5 reps (in lb)</string>
    <string name="choose_your_level">Choose your level</string>
    <string name="submit">Submit</string>
    <string name="calendar">Calendar</string>
    <string name="graph">Graph</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="exercise_tutorials">Exercise tutorials</string>
</resources>
