<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/what_exercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/what_exercises_have_you_done"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/leave_blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/leave_the_ones_you_never_did_blank"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bench_press"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overhead_press"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/squat"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadlift"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barbell_row"
        android:layout_marginBottom="20dp"/>

</LinearLayout>