<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    tools:context=".NewProgramActivity">

    <TextView
        android:id="@+id/choose_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_your_level"
        android:textSize="24sp"
        android:layout_marginBottom="15sp"
        android:layout_weight = "2"
        android:textStyle = "bold"
        />

    <Button
        android:id="@+id/beginner_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="15sp"
        android:layout_weight = "1"
        android:onClick="levelClicked"
        android:text="@string/beginner_text"
        android:autoSizeTextType="uniform"
       />

    <Button
        android:id="@+id/intermediate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="15sp"
        android:layout_weight = "1"
        android:onClick="levelClicked"
        android:text="@string/intermediate_text"
        android:autoSizeTextType="uniform"
        />

    <Button
        android:id="@+id/advanced_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="15sp"
        android:layout_weight = "1"
        android:onClick="levelClicked"
        android:text="@string/advanced_text"
        android:autoSizeTextType="uniform"
        />

</LinearLayout>