<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    tools:context=".AskingForWeightsActivity">

    <TextView
        android:id="@+id/what_exercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/what_exercises_have_you_done"
        android:layout_marginBottom="5dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/leave_blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/leave_the_ones_you_never_did_blank"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkbox_bench"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onBenchPressClick"
                android:text="@string/bench_press" />

            <EditText
                android:id="@+id/textbox_bench"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/input_max_weight_for_5_reps"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkBox_overhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onOverheadPressClick"
                android:text="@string/overhead_press" />

            <EditText
                android:id="@+id/textbox_overhead"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/input_max_weight_for_5_reps"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkBox_squat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSquatClick"
                android:text="@string/squat" />

            <EditText
                android:id="@+id/textbox_squat"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/input_max_weight_for_5_reps"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkBox_deadlift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDeadliftClick"
                android:text="@string/deadlift" />

            <EditText
                android:id="@+id/textbox_deadlift"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/input_max_weight_for_5_reps"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkBox_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onBarbellRowClick"
                android:text="@string/barbell_row" />

            <EditText
                android:id="@+id/textbox_barbell_row"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/input_max_weight_for_5_reps"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/submit_weight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="Submit" />

    </LinearLayout>



</LinearLayout>